# rdf-parsers

./: .gitignore  Cargo.toml  LICENSE  README.md  astar-algorithm.md  astar-walkthrough.md  build.rs  test.n3  test.sparql  test.ttl
.cargo/: config.toml
.claude/: CLAUDE.md
.github/workflows/: deploy-demo.yml
benchmark/: Cargo.toml
benchmark/benches/: ntriples_parse.rs  sparql_parse.rs  trig_parse.rs  turtle_parse.rs
benchmark/fixtures/: badly_broken_static.ttl  complex_static.rq  foaf_edit.ttl  foaf_static.ttl  large_static.ttl  named_graphs.trig  ontology_edit.ttl  schema_static.ttl  simple_static.nt  simple_static.rq  simple_static.trig  wikidata_edit.nt  wikidata_edit.rq  wikidata_edit.trig
benchmark/src/: lib.rs
demo/: Cargo.toml  index.html
demo/src/: lib.rs
grammars/: jsonld.txt  n3.txt  ntriples.txt  sparql.txt  trig.txt  turtle.txt
src/: a_star.rs  format.rs  impls.rs  lib.rs  list.rs  main.rs  model.rs  parser.rs  turtle.rs  util.rs
src/jsonld/: convert.rs  parser.rs
src/n3/: convert.rs  parser.rs
src/ntriples/: convert.rs  parser.rs
src/sparql/: convert.rs  mod.rs  parser.rs
src/trig/: convert.rs  mod.rs  parser.rs
src/turtle/: convert.rs  mod.rs  model.rs  parser.rs
xtask/: Cargo.toml  input.txt  turtle.txt
xtask/src/: lib.rs  main.rs  regex.rs
xtask/src/parser/: context.rs  expr.rs  mod.rs
