[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
chumsky = { version = "0.12.0", features = ["pratt"] }

syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
ariadne = { version = "0.6.0", features = ["auto-color"] }
regex = "1.12.3"
